--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vuex": "^3.1.1",
     "web3": "^1.2.1"
   },
   "devDependencies": {
